parserlib/tlangParser.py
# Generated from tlang.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class tlangParser ( Parser ):

    grammarFileName = "tlang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'->'", "'Lemma'", "'('", "')'", "'requires'", 
                     "'ensures'", "'Tot'", "':'", "'{'", "'}'", "'int'", 
                     "'pos'", "'nat'", "'string'", "'char'", "'char_code'", 
                     "'length'", "'pow2'", "'div'", "'div_non_eucl'", "'abs'", 
                     "'signed_modulo'", "'powx'", "'char_of_u32'", "'U32.uint_to_t'", 
                     "'pow2_buggy'", "'op_Multiply'", "'string_of_list'", 
                     "'list_of_string'", "'make'", "'minus'", "'u32_of_char'", 
                     "'string_of_int'", "'string_charlist_int'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'^'", "'<'", "'>'", "'='", 
                     "'!='", "'<='", "'>='", "'/\\'", "'\\/'", "'!'", "'==>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "PLUS", "MINUS", 
                      "MUL", "DIV", "MOD", "STRCAT", "LT", "GT", "EQ", "NEQ", 
                      "LTE", "GTE", "AND", "OR", "NOT", "IMPLIES", "NUM", 
                      "HEX", "NAME", "Whitespace" ]

    RULE_start = 0
    RULE_fstar_sig = 1
    RULE_params = 2
    RULE_lemma = 3
    RULE_param = 4
    RULE_ty_refinement = 5
    RULE_condition = 6
    RULE_ty = 7
    RULE_fname = 8
    RULE_expression = 9
    RULE_pexpression = 10
    RULE_multiplicative = 11
    RULE_additive = 12
    RULE_unaryArithOp = 13
    RULE_binCondOp = 14
    RULE_logicOp = 15
    RULE_value = 16

    ruleNames =  [ "start", "fstar_sig", "params", "lemma", "param", "ty_refinement", 
                   "condition", "ty", "fname", "expression", "pexpression", 
                   "multiplicative", "additive", "unaryArithOp", "binCondOp", 
                   "logicOp", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    PLUS=35
    MINUS=36
    MUL=37
    DIV=38
    MOD=39
    STRCAT=40
    LT=41
    GT=42
    EQ=43
    NEQ=44
    LTE=45
    GTE=46
    AND=47
    OR=48
    NOT=49
    IMPLIES=50
    NUM=51
    HEX=52
    NAME=53
    Whitespace=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fstar_sig(self):
            return self.getTypedRuleContext(tlangParser.Fstar_sigContext,0)


        def EOF(self):
            return self.getToken(tlangParser.EOF, 0)

        def getRuleIndex(self):
            return tlangParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = tlangParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.fstar_sig()
            self.state = 35
            self.match(tlangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fstar_sigContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params(self):
            return self.getTypedRuleContext(tlangParser.ParamsContext,0)


        def lemma(self):
            return self.getTypedRuleContext(tlangParser.LemmaContext,0)


        def getRuleIndex(self):
            return tlangParser.RULE_fstar_sig

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFstar_sig" ):
                return visitor.visitFstar_sig(self)
            else:
                return visitor.visitChildren(self)




    def fstar_sig(self):

        localctx = tlangParser.Fstar_sigContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fstar_sig)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.params()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==tlangParser.T__0:
                self.state = 38
                self.match(tlangParser.T__0)
                self.state = 39
                self.lemma()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ParamContext)
            else:
                return self.getTypedRuleContext(tlangParser.ParamContext,i)


        def getRuleIndex(self):
            return tlangParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = tlangParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.param()
            self.state = 47
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 43
                    self.match(tlangParser.T__0)
                    self.state = 44
                    self.param() 
                self.state = 49
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LemmaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ConditionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ConditionContext,i)


        def getRuleIndex(self):
            return tlangParser.RULE_lemma

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLemma" ):
                return visitor.visitLemma(self)
            else:
                return visitor.visitChildren(self)




    def lemma(self):

        localctx = tlangParser.LemmaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lemma)
        try:
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(tlangParser.T__1)
                self.state = 51
                self.match(tlangParser.T__2)
                self.state = 52
                self.condition(0)
                self.state = 53
                self.match(tlangParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(tlangParser.T__1)
                self.state = 56
                self.match(tlangParser.T__2)
                self.state = 57
                self.match(tlangParser.T__4)
                self.state = 58
                self.condition(0)
                self.state = 59
                self.match(tlangParser.T__3)
                self.state = 60
                self.match(tlangParser.T__2)
                self.state = 61
                self.match(tlangParser.T__5)
                self.state = 62
                self.condition(0)
                self.state = 63
                self.match(tlangParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(tlangParser.NAME, 0)

        def ty(self):
            return self.getTypedRuleContext(tlangParser.TyContext,0)


        def ty_refinement(self):
            return self.getTypedRuleContext(tlangParser.Ty_refinementContext,0)


        def getRuleIndex(self):
            return tlangParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = tlangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tlangParser.T__6:
                    self.state = 67
                    self.match(tlangParser.T__6)


                self.state = 70
                self.match(tlangParser.T__2)
                self.state = 71
                self.match(tlangParser.NAME)
                self.state = 72
                self.match(tlangParser.T__7)
                self.state = 73
                self.ty()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tlangParser.T__8:
                    self.state = 74
                    self.ty_refinement()


                self.state = 77
                self.match(tlangParser.T__3)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tlangParser.T__6:
                    self.state = 79
                    self.match(tlangParser.T__6)


                self.state = 82
                self.match(tlangParser.NAME)
                self.state = 83
                self.match(tlangParser.T__7)
                self.state = 84
                self.ty()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==tlangParser.T__8:
                    self.state = 85
                    self.ty_refinement()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Ty_refinementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(tlangParser.ConditionContext,0)


        def getRuleIndex(self):
            return tlangParser.RULE_ty_refinement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTy_refinement" ):
                return visitor.visitTy_refinement(self)
            else:
                return visitor.visitChildren(self)




    def ty_refinement(self):

        localctx = tlangParser.Ty_refinementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ty_refinement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(tlangParser.T__8)
            self.state = 91
            self.condition(0)
            self.state = 92
            self.match(tlangParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(tlangParser.NOT, 0)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ConditionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ConditionContext,i)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ExpressionContext,i)


        def binCondOp(self):
            return self.getTypedRuleContext(tlangParser.BinCondOpContext,0)


        def logicOp(self):
            return self.getTypedRuleContext(tlangParser.LogicOpContext,0)


        def getRuleIndex(self):
            return tlangParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)



    def condition(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = tlangParser.ConditionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_condition, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 95
                self.match(tlangParser.NOT)
                self.state = 96
                self.condition(4)
                pass

            elif la_ == 2:
                self.state = 97
                self.match(tlangParser.T__2)
                self.state = 98
                self.condition(0)
                self.state = 99
                self.match(tlangParser.T__3)
                pass

            elif la_ == 3:
                self.state = 101
                self.expression(0)
                self.state = 102
                self.binCondOp()
                self.state = 103
                self.expression(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = tlangParser.ConditionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_condition)
                    self.state = 107
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 108
                    self.logicOp()
                    self.state = 109
                    self.condition(2) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class TyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tlangParser.RULE_ty

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTy" ):
                return visitor.visitTy(self)
            else:
                return visitor.visitChildren(self)




    def ty(self):

        localctx = tlangParser.TyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ty)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tlangParser.T__10) | (1 << tlangParser.T__11) | (1 << tlangParser.T__12) | (1 << tlangParser.T__13) | (1 << tlangParser.T__14) | (1 << tlangParser.T__15))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tlangParser.RULE_fname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFname" ):
                return visitor.visitFname(self)
            else:
                return visitor.visitChildren(self)




    def fname(self):

        localctx = tlangParser.FnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tlangParser.T__16) | (1 << tlangParser.T__17) | (1 << tlangParser.T__18) | (1 << tlangParser.T__19) | (1 << tlangParser.T__20) | (1 << tlangParser.T__21) | (1 << tlangParser.T__22) | (1 << tlangParser.T__23) | (1 << tlangParser.T__24) | (1 << tlangParser.T__25) | (1 << tlangParser.T__26) | (1 << tlangParser.T__27) | (1 << tlangParser.T__28) | (1 << tlangParser.T__29) | (1 << tlangParser.T__30) | (1 << tlangParser.T__31) | (1 << tlangParser.T__32) | (1 << tlangParser.T__33))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tlangParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class UnaryExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def unaryArithOp(self):
            return self.getTypedRuleContext(tlangParser.UnaryArithOpContext,0)

        def expression(self):
            return self.getTypedRuleContext(tlangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnaryExpr" ):
                return visitor.visitUnaryExpr(self)
            else:
                return visitor.visitChildren(self)


    class ValueExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(tlangParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueExpr" ):
                return visitor.visitValueExpr(self)
            else:
                return visitor.visitChildren(self)


    class AddExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ExpressionContext,i)

        def additive(self):
            return self.getTypedRuleContext(tlangParser.AdditiveContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)


    class MulExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ExpressionContext,i)

        def multiplicative(self):
            return self.getTypedRuleContext(tlangParser.MultiplicativeContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)


    class ParenExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pexpression(self):
            return self.getTypedRuleContext(tlangParser.PexpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenExpr" ):
                return visitor.visitParenExpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = tlangParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tlangParser.MINUS]:
                localctx = tlangParser.UnaryExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 121
                self.unaryArithOp()
                self.state = 122
                self.expression(5)
                pass
            elif token in [tlangParser.NUM, tlangParser.HEX, tlangParser.NAME]:
                localctx = tlangParser.ValueExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 124
                self.value()
                pass
            elif token in [tlangParser.T__2]:
                localctx = tlangParser.ParenExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 125
                self.match(tlangParser.T__2)
                self.state = 126
                self.pexpression()
                self.state = 127
                self.match(tlangParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 141
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 139
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = tlangParser.MulExprContext(self, tlangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 131
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 132
                        self.multiplicative()
                        self.state = 133
                        self.expression(5)
                        pass

                    elif la_ == 2:
                        localctx = tlangParser.AddExprContext(self, tlangParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 135
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 136
                        self.additive()
                        self.state = 137
                        self.expression(4)
                        pass

             
                self.state = 143
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PexpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return tlangParser.RULE_pexpression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprPExprContext(PexpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.PexpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(tlangParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprPExpr" ):
                return visitor.visitExprPExpr(self)
            else:
                return visitor.visitChildren(self)


    class CallExprContext(PexpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a tlangParser.PexpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fname(self):
            return self.getTypedRuleContext(tlangParser.FnameContext,0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tlangParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(tlangParser.ExpressionContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallExpr" ):
                return visitor.visitCallExpr(self)
            else:
                return visitor.visitChildren(self)



    def pexpression(self):

        localctx = tlangParser.PexpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pexpression)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [tlangParser.T__16, tlangParser.T__17, tlangParser.T__18, tlangParser.T__19, tlangParser.T__20, tlangParser.T__21, tlangParser.T__22, tlangParser.T__23, tlangParser.T__24, tlangParser.T__25, tlangParser.T__26, tlangParser.T__27, tlangParser.T__28, tlangParser.T__29, tlangParser.T__30, tlangParser.T__31, tlangParser.T__32, tlangParser.T__33]:
                localctx = tlangParser.CallExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.fname()
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 145
                    self.expression(0)
                    self.state = 148 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tlangParser.T__2) | (1 << tlangParser.MINUS) | (1 << tlangParser.NUM) | (1 << tlangParser.HEX) | (1 << tlangParser.NAME))) != 0)):
                        break

                pass
            elif token in [tlangParser.T__2, tlangParser.MINUS, tlangParser.NUM, tlangParser.HEX, tlangParser.NAME]:
                localctx = tlangParser.ExprPExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MultiplicativeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self):
            return self.getToken(tlangParser.MUL, 0)

        def DIV(self):
            return self.getToken(tlangParser.DIV, 0)

        def MOD(self):
            return self.getToken(tlangParser.MOD, 0)

        def STRCAT(self):
            return self.getToken(tlangParser.STRCAT, 0)

        def getRuleIndex(self):
            return tlangParser.RULE_multiplicative

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicative" ):
                return visitor.visitMultiplicative(self)
            else:
                return visitor.visitChildren(self)




    def multiplicative(self):

        localctx = tlangParser.MultiplicativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_multiplicative)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << tlangParser.MUL) | (1 << tlangParser.DIV) | (1 << tlangParser.MOD) | (1 << tlangParser.STRCAT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AdditiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLUS(self):
            return self.getToken(tlangParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(tlangParser.MINUS, 0)

        def getRuleIndex(self):
            return tlangParser.RULE_additive

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditive" ):
                return visitor.visitAdditive(self)
            else:
                return visitor.visitChildren(self)




    def additive(self):
